Fix title alignment when no there are no cta in header

--- a/assets/admin/css/settings.css
+++ b/assets/admin/css/settings.css
@@ -105,6 +105,7 @@
     margin: 0;
     letter-spacing: 1px;
     text-transform: uppercase;
+    text-align: left;
 }
 
 .ots-admin-page .nav-tab {
